--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
         <title>TEA CREAM</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,13 +12,13 @@
         <header class="main-header">
             <img src="img\NAVBAR.png" class="main-navbar">
             <img src="img\LOGO.png" class="main-logo" alt="Logo">
-            <h1 class="business-name">TEA CREME</h1>
+            <h1 class="business-name"><a href="index.html" class="clickable-name">TEA CREME</a></h1>
             <nav class="top-menu">
                 <div class="nav-links">
                     <ul>
-                        <li><a href="#" class="btnProducts" id="productsBtn">Our Products</a></li>
-                        <li><a href="#" class="btnServices" id="servicesBtn">Services</a></li>
-                        <li><a href="#" class="btnAboutUs" id="aboutBtn">About Us</a></li>
+                        <li><a href="OurProducts.html" class="btnProducts" id="productsBtn">Our Products</a></li>
+                        <li><a href="Services.html" class="btnServices" id="servicesBtn">Services</a></li>
+                        <li><a href="AboutUs.html" class="btnAboutUs" id="aboutBtn">About Us</a></li>
                         <li><a href="#" class="btnContact" id="contactbtn">Contact Us</a></li>
                     </ul>
                 </div>
@@ -27,22 +29,23 @@
                 <h1>Indulge In<br>The Creamy<br>Goodness</h1>
             </div>
             <div class="sub-tagline">
-                <p>Savor the rich charm of Tea Crème, a smooth <br>blend that combines the calming properties of<br> 
-                    tea with a rich, creamy touch</p>
+                <div>
+                    <p>Savor the rich charm of Tea Crème, a smooth <br>blend that combines the calming properties of<br> 
+                        tea with a rich, creamy touch</p>    
+                </div>
+                <div class="upper-two-buttons">
+                    <button class="pill-button" type="button">ORDER NOW</button>
+                    <button class="more-menu-pill-button" type="button">MORE MENU</button>
+                </div>
             </div>
             <div class="strawberry-milktea">
                 <img src="img\strawberry-milktea.png">
             </div>
-            <div class="more-menu-button">
-                <button class="more-menu-pill-button" type="button">MORE MENU</button>
-            </div>
-            <div class="order-now-button">
-                <button class="pill-button" type="button">ORDER NOW</button>
-            </div>
         </div>
-        <div class="bestsellers-countainer-class">
+
+        <div class="bestsellers-container-class">
             <h1 class="best-sellers">BEST SELLERS</h1>
-            <div class="rounded-bottom-container-square"></div>
+            <div class="rounded-bottom-container-square">
                 <div class="rounded-bottom-square1">
                     <img src="img\bestsellers1.png" class="bestsellers1">
                     <p class="name-bestsellers1">WINTERMELON</p>
@@ -63,6 +66,7 @@
                 </div>
             </div>
         </div>
+        
 
         <div class="more-info">
             <img src="img\place.png" class="place-image">
@@ -80,14 +84,14 @@
                 <img src="img\oreocheesecake.png" class="cheesecake-image">
             </div>
         </div>
-        <div>
-            <div class="info-second-to-the-bottom">
-                <p class="main-info-title-bottom2">Elevate your<br>Milktea game<br>with the finest<br>Flavors.</p>
-                <p class="main-info-subtitle-bottom2">We are purveyors of delightful drinks that bring<br>joy to every sip. Prepare to be amazed by the<br>symphony of flavors that awaits you.</p>
-                <button class="learn-more-button2" type="button">LEARN MORE</button>
-                <img src="img\3typemilktea.png" class="three-milkteas" alt="3typemilktea">
-            </div>
+
+        <div class="info-second-to-the-bottom">
+            <p class="main-info-title-bottom2">Elevate your<br>Milktea game<br>with the finest<br>Flavors.</p>
+            <p class="main-info-subtitle-bottom2">We are purveyors of delightful drinks that bring<br>joy to every sip. Prepare to be amazed by the<br>symphony of flavors that awaits you.</p>
+            <button class="learn-more-button2" type="button">LEARN MORE</button>
+            <img src="img\3typemilktea.png" class="three-milkteas" alt="3typemilktea">
         </div>
+
         <div class="info-bottom">
             <p class="info-bottom-title">Why Are We Different</p>
             <p class="info-bottom-subtitle">We don't just make your drinks, we make your day!</p>
@@ -108,6 +112,24 @@
                     <p class="affordable">AFFORDABLE PRICE</p>
                     <p class="affordable-desc">Our drinks prices are<br>easy to afford</p>
                 </div> 
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <div class="footer-buttons">
+                <p href="index.html" class="main-name1-footer">TEA CREME</p>
+                <a href="OurProducts.html" class="bottom-OurProducts">Our products</a>
+                <a href="Services.html" class="bottom-Services">Service</a>
+                <a href="AboutUs.html" class="bottom-AboutUs">About Us</a>
+                <a href="" class="bottom-contactUs">Contact Us</a>
+            </div>
+            <div class="middle-name-logo">
+                <img src="img\LOGO.png" class="footer-logo">
+                <p class="main-name2-footer">TEA CREME</p>
+            </div>
+            <div class="footer-info">
+                <p class="main-name1-footer">OPEN HOURS</p>
+                <p class="date-time">Mon - Fri<br>5:00PM - 11:00PM</p>
             </div>
         </div>
         <script src="script.js"></script>
