--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         tea with a rich, creamy touch</p>    
                 </div>
                 <div class="upper-two-buttons">
-                    <button class="pill-button" type="button">ORDER NOW</button>
+                    <button onclick="window.location.href='OurProducts.html'" class="pill-button" type="button">ORDER NOW</button>
                     <button class="more-menu-pill-button" type="button">MORE MENU</button>
                 </div>
             </div>
@@ -74,13 +74,13 @@
                 <p class="title-description-location">Check out our<br>Tea Creme shop</p>
                 <p class="subtitle-description-location">Buy now and experience!</p>
                 <div class="find-us">
-                    <button class="find-us-button" type="button">FIND US</button>
+                    <button class="find-us-button" type="button" onclick="window.location.href='AboutUs.html'">FIND US</button>
                 </div>
             </div>
             <div class="cheesecake-container">
                 <p class="title-more-info">Try Our<br>Cheesecake Series</p>
                 <p class="title1-more-info">Indulge in Cheesecake ecstasy.</p>
-                <button class="contact-us-button" type="button">CONTACT US</button>
+                <button class="contact-us-button" type="button" onclick="window.location.href='AboutUs.html'">CONTACT US</button>
                 <img src="img\oreocheesecake.png" class="cheesecake-image">
             </div>
         </div>
