--- a/OurProducts.html
+++ b/OurProducts.html
@@ -31,59 +31,59 @@
         </div>
         <div class="drinks-types-divider">
             <p class="main-drinks-name">Drinks</p>
-            <p><a href="#new-flavors">New Flavors</a></p>
-            <p><a href="#frappe-series">Frappe Series</a></p>
-            <p><a href="#lemonade-series">Lemonade Series</a></p>
-            <p><a href="#oreo-series">Oreo Series</a></p>
-            <p><a href="#creamcheese-series">Creamcheese Series</a></p>
-            <p><a href="#classic-milktea">Classic Milktea</a></p>
-            <p><a href="#chocolate-milktea">Chocolate Milktea</a></p>
+            <p><a href="#new-flavors" class="scroll-link">New Flavors</a></p>
+            <p><a href="#frappe-series " class="scroll-link">Frappe Series</a></p>
+            <p><a href="#lemonade-series" class="scroll-link">Lemonade Series</a></p>
+            <p><a href="#oreo-series" class="scroll-link">Oreo Series</a></p>
+            <p><a href="#creamcheese-series" class="scroll-link">Creamcheese Series</a></p>
+            <p><a href="#classic-milktea" class="scroll-link">Classic Milktea</a></p>
+            <p><a href="#chocolate-milktea" class="scroll-link">Chocolate Milktea</a></p>
         </div>
         <div class="new-flavors-divider">
             <p class="new-flavor-title" id="new-flavors">New Flavors</p>
             <div class="container1">
                 <div class="new-flavor-container1">
-                    <p>hi</p>
+                    <p class="txtformat">Avocado</p>
                     <button class="nf1-size1" type="button">16 oz</button>
                     <button class="nf1-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container2">
-                    <p>hi</p>
+                    <p class="txtformat">Honey Dew</p>
                     <button class="nf2-size1" type="button">16 oz</button>
                     <button class="nf2-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container3">
-                    <p>hi</p>
+                    <p class="txtformat">Espresso</p>
                     <button class="nf3-size1" type="button">16 oz</button>
                     <button class="nf3-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container4">
-                    <p>hi</p>
+                    <p class="txtformat">Caramel Machito</p>
                     <button class="nf4-size1" type="button">16 oz</button>
                     <button class="nf4-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container5">
-                    <p>hi</p>
+                    <p class="txtformat">Black Jungle</p>
                     <button class="nf5-size1" type="button">16 oz</button>
                     <button class="nf5-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container6">
-                    <p>hi</p>
+                    <p class="txtformat">Nuttella Cream</p>
                     <button class="nf6-size1" type="button">16 oz</button>
                     <button class="nf6-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container7">
-                    <p>hi</p>
+                    <p class="txtformat">Cashew White</p>
                     <button class="nf7-size1" type="button">16 oz</button>
                     <button class="nf7-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container8">
-                    <p>hi</p>
+                    <p class="txtformat">Coffee Cake</p>
                     <button class="nf8-size1" type="button">16 oz</button>
                     <button class="nf8-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container9">
-                    <p>hi</p>
+                    <p class="txtformat">Meiji Apollo</p>
                     <button class="nf9-size1" type="button">16 oz</button>
                     <button class="nf9-size2" type="button">22 oz</button>
                 </div>
@@ -91,47 +91,47 @@
             <p class="new-flavor-title" id="frappe-series">Frappe Series</p>
             <div class="container1">
                 <div class="new-flavor-container1">
-                    <p>hi</p>
+                    <p class="txtformat">Mango Graham</p>
                     <button class="fs1-size1" type="button">16 oz</button>
                     <button class="fs1-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container2">
-                    <p>hi</p>
+                    <p class="txtformat">Strawberry</p>
                     <button class="fs2-size1" type="button">16 oz</button>
                     <button class="fs2-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container3">
-                    <p>hi</p>
+                    <p class="txtformat">Ube Quezo Royale</p>
                     <button class="fs3-size1" type="button">16 oz</button>
                     <button class="fs3-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container4">
-                    <p>hi</p>
+                    <p class="txtformat">Coffee Jelly</p>
                     <button class="fs4-size1" type="button">16 oz</button>
                     <button class="fs4-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container5">
-                    <p>hi</p>
+                    <p class="txtformat">Salted Caramel</p>
                     <button class="fs5-size1" type="button">16 oz</button>
                     <button class="fs5-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container6">
-                    <p>hi</p>
+                    <p class="txtformat">Ferrero Almond</p>
                     <button class="fs6-size1" type="button">16 oz</button>
                     <button class="fs6-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container7">
-                    <p>hi</p>
+                    <p class="txtformat">Matcha White Chocolate</p>
                     <button class="fs7-size1" type="button">16 oz</button>
                     <button class="fs6-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container8">
-                    <p>hi</p>
+                    <p class="txtformat">Blueberry</p>
                     <button class="fs8-size1" type="button">16 oz</button>
                     <button class="fs8-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container9">
-                    <p>hi</p>
+                    <p class="txtformat">Oreo Flurry</p>
                     <button class="fs9-size1" type="button">16 oz</button>
                     <button class="fs9-size2" type="button">22 oz</button>
                 </div>
@@ -139,17 +139,17 @@
             <p class="new-flavor-title" id="lemonade-series">Lemonade Series</p>
             <div class="container1">
                 <div class="new-flavor-container1">
-                    <p>hi</p>
+                    <p class="txtformat">Lemon Yakult Cucumber</p>
                     <button class="ls1-size1" type="button">16 oz</button>
                     <button class="ls1-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container2">
-                    <p>hi</p>
+                    <p class="txtformat">Lemon Yakult</p>
                     <button class="ls2-size1" type="button">16 oz</button>
                     <button class="ls2-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container3">
-                    <p>hi</p>
+                    <p class="txtformat">Lemon Cucumber</p>
                     <button class="ls3-size1" type="button">16 oz</button>
                     <button class="ls3-size2" type="button">22 oz</button>
                 </div>
@@ -157,22 +157,22 @@
             <p class="new-flavor-title2" id="oreo-series">OREO Series</p>
             <div class="container2">
                 <div class="new-flavor-container1">
-                    <p>hi</p>
+                    <p class="txtformat">Oreo Cheesecake</p>
                     <button class="os1-size1" type="button">16 oz</button>
                     <button class="os1-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container2">
-                    <p>hi</p>
+                    <p class="txtformat">Oreo MilkCake</p>
                     <button class="os2-size1" type="button">16 oz</button>
                     <button class="os2-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container3">
-                    <p>hi</p>
+                    <p class="txtformat">Oreo Cookie Crumble</p>
                     <button class="os3-size1" type="button">16 oz</button>
                     <button class="os3-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container4-oreo-series">
-                    <p>hi</p>
+                    <p class="txtformat">Oreo Strawberry</p>
                     <button class="os4-size1" type="button">16 oz</button>
                     <button class="os4-size2" type="button">22 oz</button>
                 </div>
@@ -180,62 +180,62 @@
             <p class="new-flavor-title" id="creamcheese-series">Creamcheese Series</p>
             <div class="container1">
                 <div class="new-flavor-container1">
-                    <p>hi</p>
+                    <p class="txtformat">Cheesecake</p>
                     <button class="cs1-size1" type="button">16 oz</button>
                     <button class="cs1-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container2">
-                    <p>hi</p>
+                    <p class="txtformat">Matcha</p>
                     <button class="cs2-size1" type="button">16 oz</button>
                     <button class="cs2-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container3">
-                    <p>hi</p>
+                    <p class="txtformat">Cheese Mango</p>
                     <button class="cs3-size1" type="button">16 oz</button>
                     <button class="cs3-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container4">
-                    <p>hi</p>
+                    <p class="txtformat">Salted Caramel</p>
                     <button class="cs4-size1" type="button">16 oz</button>
                     <button class="cs4-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container5">
-                    <p>hi</p>
+                    <p class="txtformat">Ube Taro</p>
                     <button class="cs5-size1" type="button">16 oz</button>
                     <button class="cs5-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container6">
-                    <p>hi</p>
+                    <p class="txtformat">Strawberry</p>
                     <button class="cs6-size1" type="button">16 oz</button>
                     <button class="cs6-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container7">
-                    <p>hi</p>
+                    <p class="txtformat">Chucky</p>
                     <button class="cs7-size1" type="button">16 oz</button>
                     <button class="cs7-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container8">
-                    <p>hi</p>
+                    <p class="txtformat">Red Velvet</p>
                     <button class="cs8-size1" type="button">16 oz</button>
                     <button class="cs8-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container9">
-                    <p>hi</p>
+                    <p class="txtformat">Melona</p>
                     <button class="cs9-size1" type="button">16 oz</button>
                     <button class="cs9-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container10">
-                    <p>hi</p>
+                    <p class="txtformat">Hershey's Chocolate</p>
                     <button class="cs10-size1" type="button">16 oz</button>
                     <button class="cs10-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container11">
-                    <p>hi</p>
+                    <p class="txtformat">Dark Chocolate</p>
                     <button class="cs11-size1" type="button">16 oz</button>
                     <button class="cs11-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container12">
-                    <p>hi</p>
+                    <p class="txtformat">Chocolate</p>
                     <button class="cs12-size1" type="button">16 oz</button>
                     <button class="cs12-size2" type="button">22 oz</button>
                 </div>
@@ -243,47 +243,47 @@
             <p class="new-flavor-title3" id="classic-milktea">Classic Milktea</p>
             <div class="container1">
                 <div class="new-flavor-container1">
-                    <p>hi</p>
+                    <p class="txtformat">Watermellon</p>
                     <button class="cm1-size1" type="button">16 oz</button>
                     <button class="cm1-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container2">
-                    <p>hi</p>
+                    <p class="txtformat">Okinawa</p>
                     <button class="cm2-size1" type="button">16 oz</button>
                     <button class="cm2-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container3">
-                    <p>hi</p>
+                    <p class="txtformat">Cheesecake</p>
                     <button class="cm3-size1" type="button">16 oz</button>
                     <button class="cm3-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container4">
-                    <p>hi</p>
+                    <p class="txtformat">Cookies N Cream</p>
                     <button class="cm4-size1" type="button">16 oz</button>
                     <button class="cm4-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container5">
-                    <p>hi</p>
+                    <p class="txtformat">Hakkaido</p>
                     <button class="cm5-size1" type="button">16 oz</button>
                     <button class="cm5-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container6">
-                    <p>hi</p>
+                    <p class="txtformat">Vanilla</p>
                     <button class="cm6-size1" type="button">16 oz</button>
                     <button class="cm6-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container7">
-                    <p>hi</p>
+                    <p class="txtformat">Salted Caramel</p>
                     <button class="cm7-size1" type="button">16 oz</button>
                     <button class="cm7-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container8">
-                    <p>hi</p>
+                    <p class="txtformat">Thai</p>
                     <button class="cm8-size1" type="button">16 oz</button>
                     <button class="cm8-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container9">
-                    <p>hi</p>
+                    <p class="txtformat">White Rabbit</p>
                     <button class="cm9-size1" type="button">16 oz</button>
                     <button class="cm9-size2" type="button">22 oz</button>
                 </div>
@@ -291,20 +291,38 @@
             <p class="new-flavor-title" id="chocolate-milktea">Chocolate Milktea</p>
             <div class="container1">
                 <div class="new-flavor-container1">
-                    <p>hi</p>
+                    <p class="txtformat">Chocolate</p>
                     <button class="choco1-size1" type="button">16 oz</button>
                     <button class="choco1-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container2">
-                    <p>hi</p>
+                    <p class="txtformat">Dark Chocolate</p>
                     <button class="choco2-size1" type="button">16 oz</button>
                     <button class="choco2-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container3">
-                    <p>hi</p>
+                    <p class="txtformat">Hershey's Chocolate</p>
                     <button class="choco3-size1" type="button">16 oz</button>
                     <button class="choco3-size2" type="button">22 oz</button>
                 </div>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <div class="footer-buttons">
+                <p href="index.html" class="main-name1-footer">TEA CREME</p>
+                <a href="OurProducts.html" class="bottom-OurProducts">Our products</a>
+                <a href="Services.html" class="bottom-Services">Service</a>
+                <a href="AboutUs.html" class="bottom-AboutUs">About Us</a>
+                <a href="" class="bottom-contactUs">Contact Us</a>
+            </div>
+            <div class="middle-name-logo">
+                <img src="img\LOGO.png" class="footer-logo">
+                <p class="main-name2-footer">TEA CREME</p>
+            </div>
+            <div class="footer-info">
+                <p class="main-name1-footer">OPEN HOURS</p>
+                <p class="date-time">Mon - Fri<br>5:00PM - 11:00PM</p>
             </div>
         </div>
         <script src="script.js"></script>
