--- a/OurProducts.html
+++ b/OurProducts.html
@@ -39,6 +39,14 @@
             <p><a href="#classic-milktea" class="scroll-link">Classic Milktea</a></p>
             <p><a href="#chocolate-milktea" class="scroll-link">Chocolate Milktea</a></p>
         </div>
+        <div class="search-container">
+            <input type="text" class="search-input" id="searchInput" placeholder="">
+            <button class="search-button" onclick="performSearch()">
+              <img src="img\search-icon.png" class="search-icon" alt="search-logo">
+            </button>
+        </div>
+        
+          <div id="searchResults"></div>
         <div class="new-flavors-divider">
             <p class="new-flavor-title" id="new-flavors">New Flavors</p>
             <div class="container1">
@@ -243,46 +251,63 @@
             <p class="new-flavor-title3" id="classic-milktea">Classic Milktea</p>
             <div class="container1">
                 <div class="new-flavor-container1">
-                    <p class="txtformat">Watermellon</p>
+                    <img src="classics\wintermelon.png" alt="Winter Melon" class="pic-size">
+                    <p class="txtformat">Wintermellon</p>
                     <button class="cm1-size1" type="button">16 oz</button>
                     <button class="cm1-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container2">
+                    <img src="classics\okinawa.png" alt="okinawa" class="pic-size">
+
                     <p class="txtformat">Okinawa</p>
                     <button class="cm2-size1" type="button">16 oz</button>
                     <button class="cm2-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container3">
+                    <img src="classics\cheesecake.png" alt="cheesecake" class="pic-size">
+
                     <p class="txtformat">Cheesecake</p>
                     <button class="cm3-size1" type="button">16 oz</button>
                     <button class="cm3-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container4">
+                    <img src="classics\cookiesNcream.png" alt="cookiesNcream" class="pic-size">
+
                     <p class="txtformat">Cookies N Cream</p>
                     <button class="cm4-size1" type="button">16 oz</button>
                     <button class="cm4-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container5">
-                    <p class="txtformat">Hakkaido</p>
+                    <img src="classics\hokkaido.png" alt="hokkaido" class="pic-size">
+
+                    <p class="txtformat">Hokkaido</p>
                     <button class="cm5-size1" type="button">16 oz</button>
                     <button class="cm5-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container6">
+                    <img src="classics\vanilla.png" alt="vanilla" class="pic-size">
+
                     <p class="txtformat">Vanilla</p>
                     <button class="cm6-size1" type="button">16 oz</button>
                     <button class="cm6-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container7">
+                    <img src="classics\saltedCaramel.png" alt="saltedCaramel" class="pic-size">
+
                     <p class="txtformat">Salted Caramel</p>
                     <button class="cm7-size1" type="button">16 oz</button>
                     <button class="cm7-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container8">
+                    <img src="classics\thai.png" alt="thai" class="pic-size">
+
                     <p class="txtformat">Thai</p>
                     <button class="cm8-size1" type="button">16 oz</button>
                     <button class="cm8-size2" type="button">22 oz</button>
                 </div>
                 <div class="new-flavor-container9">
+                    <img src="classics\whiteRabbit.png" alt="whiterabbit" class="pic-size">
+
                     <p class="txtformat">White Rabbit</p>
                     <button class="cm9-size1" type="button">16 oz</button>
                     <button class="cm9-size2" type="button">22 oz</button>
