--- a/index.html
+++ b/index.html
@@ -49,20 +49,23 @@
                 <div class="rounded-bottom-square1">
                     <img src="img\bestsellers1.png" class="bestsellers1">
                     <p class="name-bestsellers1">WINTERMELON</p>
-                    <button class="bs1-size1" type="button">16 oz</button>
-                    <button class="bs1-size2" type="button">22 oz</button>
+                    <img src="img\shopping-cart.png" alt="cart" class="shopping-cart">
+                    <button class="bs1-size1" type="button" id="wintermellon-16oz">16 oz</button>
+                    <button class="bs1-size2" type="button" id="wintermellon-22oz">22 oz</button>
                 </div>
                 <div class="rounded-bottom-square2">
                     <img src="img\bestsellers2.png" class="bestsellers2">
                     <p class="name-bestsellers2">OKINAWA</p>
-                    <button class="bs2-size1" type="button">16 oz</button>
-                    <button class="bs2-size2" type="button">22 oz</button>
+                    <img src="img\shopping-cart.png" alt="cart" class="shopping-cart">
+                    <button class="bs2-size1" type="button" id="okinawa-16oz">16 oz</button>
+                    <button class="bs2-size2" type="button" id="okinawa-22oz">22 oz</button>
                 </div>
                 <div class="rounded-bottom-square3">
                     <img src="img\bestsellers3.png" class="bestsellers3">
                     <p class="name-bestsellers3">OREO CREMECHEESE</p>
-                    <button class="bs3-size1" type="button">16 oz</button>
-                    <button class="bs3-size2" type="button">22 oz</button>
+                    <img src="img\shopping-cart.png" alt="cart" class="shopping-cart">
+                    <button class="bs3-size1" type="button" id="oreo-cremecheese-16oz">16 oz</button>
+                    <button class="bs3-size2" type="button" id="oreo-cremecheese-16oz">22 oz</button>
                 </div>
             </div>
         </div>
