--- a/Services.html
+++ b/Services.html
@@ -9,7 +9,6 @@
         <link rel="stylesheet" href="css\AboutUSstyles.css">
     </head>
     <body>
-        <script src="script.js"></script>
         <header class="main-header">
             <img src="img\NAVBAR.png" class="main-navbar">
             <img src="img\LOGO.png" class="main-logo" alt="Logo">
@@ -22,21 +21,26 @@
                         <li><a href="AboutUs.html" class="btnAboutUs" id="aboutBtn">About Us</a></li>
                         <li><a class="open-cart-button" onclick="toggleCart()"><img src="img\NAV-CART-ICON.png" class="cart" alt="cart"></a></li>
 
+
                         <div class="cart-container">
                             <div class="cart-header">
                                 <img src="img/cart-icon.svg" alt="cart" class="cart-icon">
                                 <p class="my-cart">My Cart</p>
                             </div>
-                            <div class="cart-items"></div>
                             <ul id="cartItems"></ul>
                             <div class="checkout-div" id="cartSummary">
-                                <p class="final-amount">Total: <span id="totalAmount">Php 0.00</span></p>
-                                <button id="checkoutButton">Checkout Now</button>
+                                <p class="final-amount">Total: <span id="yourTotalAmountElement">Php 0.00</span></p>
+                                <a href="checkoutPage.html">
+                                    <button onclick="checkout()" id="checkoutButton" >Checkout Now</button>
+                                </a>
                             </div>
                         </div>
+
                     </ul>
                 </div>
             </nav>
         </header>
+        <script src="script.js"></script>
+        <script src="addToCartScript.js"></script>
     </body>
 </html>
